argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    ### static ip address that I made
    kubernetes.io/ingress.global-static-ip-name: "k8s-load-balancer"
spec:
  rules:
    - host: argocd.ppa-dun.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
